# github-events-poller

./: .env_example  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  docker-compose.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 316ad78fe879_events_table.py  8822849f5d9f_change_int_to_bigint_in_sqlalchemy.py  9f892649be2f_add_indices_and_mapped_column_to_events_.py  bc22f5133ce4_add_inserted_at_column.py  c65de9029e0c_add_action_field_to_the_events_table.py  cbb035c7c32c_make_datetimes_tz_aware.py  fb41dcc7e934_make_event_id_column_unique.py
events_poller/: logger.py  settings.py
events_poller/api/: app.py  router.py
events_poller/api/endpoints/: metrics.py  visualization.py
events_poller/controllers/: database.py  metrics.py  visualize.py
events_poller/database/: engine.py  models.py
events_poller/models/: enum.py  models.py
events_poller/poller/: poller.py  run.py  worker.py
tests/: conftest.py  mock_data.py  test_api.py  test_db.py  test_metrics.py
