[project]
name = "github-events-poller"
version = "0.1.0"
description = "GitHub events poller with an API that provides various metrics to user."
authors = [{name = "Tomáš Macko", email = "tomik.macko@gmail.com"}]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "alembic>=1.16.5",
    "asyncpg>=0.30.0",
    "fastapi[standard]>=0.116.1",
    "greenlet>=3.2.4",
    "pre-commit>=4.3.0",
    "psycopg2>=2.9.10",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "pytest>=8.4.2",
    "requests>=2.32.5",
    "sqlalchemy>=2.0.43",
    "structlog>=25.4.0",
]
